More fixes for arrow icon for open and closed folders in clippings tree
(part of issue #488)

--- a/wx-src/style/clippingsTree.css
+++ b/wx-src/style/clippingsTree.css
@@ -109,7 +109,6 @@ span.fancytree-title {
 .ui-fancytree .fancytree-exp-e span.fancytree-expander,
 .ui-fancytree .fancytree-exp-cl span.fancytree-expander,
 .ui-fancytree .fancytree-exp-el span.fancytree-expander {
-    margin-top: 4px;
     background-position: unset;   
 }
 
